# travel-site-template

./: .gitignore  Dockerfile  db.py  docker-compose.yml  entrypoint.sh  index.html  main.py  models.py  pyproject.toml  req.txt  setup.cfg
nginx/: nginx.conf
static/css/: style.css  style.css.map  style.scss
static/scripts/: script.js
templates/: index.html
travel_site/: db.sqlite3
travel_site/core/: asgi.py  settings.py  urls.py  wsgi.py
travel_site/docker/nginx/: nginx.conf
travel_site/main/: admin.py  forms.py  main.py  models.py  tests.py  views.py
travel_site/main/migrations/: 0001_initial.py  0002_userdata.py  0003_alter_userdata_phone_number.py  0004_alter_userdata_phone_number.py  0005_alter_userdata_phone_number.py  0006_subscirbe_emails.py
travel_site/main/static/: style.css  style.css.map  style.scss
travel_site/main/templates/main/: index.html
travel_site/static/: script.js  style.css  style.css.map  style.scss
